Fix article feed spacing

--- a/src/less/components/page.less
+++ b/src/less/components/page.less
@@ -8,6 +8,10 @@ main {
   flex: 1;
 }
 
+main#article-feed {
+  display: flex;
+}
+
 /**
  * @class default-header
  * @description Default container for page titles.
